--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive_flutter: ^1.1.0
 
 dev_dependencies:
+  build_runner: ^2.2.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
