--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  bloc: ^9.0.0
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.8.0+1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
   font_awesome_flutter: ^10.2.1
   
+  get_it: ^8.0.3
   go_router: ^5.2.4
   google_fonts: ^3.0.1
   hive: ^2.2.3
