Role base enhancement’s

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.clean_arch_bookly_app">
+    package="com.daoud.bokyapp">
    <application
         android:label="clean_arch_bookly_app"
         android:name="${applicationName}"
